update verson 3 and add import excel

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Quản lý kho</title>
   </head>
   <body>
-    <noscript>Bạn cần bật JavaScript để chạy ứng dụng này.</noscript>
+    <!-- <noscript>Bạn cần bật JavaScript để chạy ứng dụng này.</noscript> -->
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
